<resources>
  <string name="app_name">money_machine</string>
  <string name="tab_spending">Spending</string>
  <string name="tab_saving">Saving</string>
  <string name="transaction_add">Add Transaction</string>
  <string name="transaction_add_arg">Add %s Transaction</string>

  <string name="label_user_id">User Id</string>
  <string name="label_date">Date</string>
  <string name="label_amount">Amount</string>
  <string name="label_tag">Tag</string>
  <string name="label_description">Description</string>
  <string name="done">Done</string>

  <!-- Nav argument values -->
  <string name="transaction_spending">Spending</string>
  <string name="transaction_saving">Saving</string>

  <string-array name="transaction_tags">
    <item>FOOD</item>
    <item>HEALTH</item>
    <item>HOME</item>
    <item>TECH</item>
    <item>VEHICLE</item>
    <item>CLOTH</item>
    <item>ACCOUNT</item>
    <item>OTHER</item>
  </string-array>
</resources>
