<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/tab_spending"
>

  <fragment
    android:id="@+id/tab_spending"
    android:name="com.example.money_machine.transaction.fragment.TransactionsFragment"
    android:label="@string/tab_spending"
    tools:layout="@layout/fragment_transactions">

    <action
      android:id="@+id/action_add_transaction"
      app:destination="@id/fragment_add_transaction"
      app:enterAnim="@anim/nav_default_enter_anim"
      app:exitAnim="@anim/nav_default_exit_anim"
      app:popEnterAnim="@anim/nav_default_pop_enter_anim"
      app:popExitAnim="@anim/nav_default_pop_exit_anim"
      app:popUpTo="@+id/tab_spending" />

    <argument
      android:name="transactionType"
      android:defaultValue="@string/transaction_spending"
      app:argType="reference" />
  </fragment>

  <fragment
    android:id="@+id/tab_saving"
    android:name="com.example.money_machine.transaction.fragment.TransactionsFragment"
    android:label="@string/tab_saving"
    tools:layout="@layout/fragment_transactions">

    <action
      android:id="@+id/action_add_transaction"
      app:destination="@id/fragment_add_transaction"
      app:enterAnim="@anim/nav_default_enter_anim"
      app:exitAnim="@anim/nav_default_exit_anim"
      app:popEnterAnim="@anim/nav_default_pop_enter_anim"
      app:popExitAnim="@anim/nav_default_pop_exit_anim"
      app:popUpTo="@+id/tab_saving" />

    <argument
      android:name="transactionType"
      android:defaultValue="@string/transaction_saving"
      app:argType="reference" />
  </fragment>

  <fragment
    android:id="@+id/fragment_add_transaction"
    android:name="com.example.money_machine.transaction.fragment.AddTransactionFragment"
    android:label="@string/transaction_add"
    tools:layout="@layout/fragment_add_transaction">

    <argument
      android:name="transactionType"
      android:defaultValue="@string/transaction_spending"
      app:argType="reference" />
  </fragment>

</navigation>