<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_margin"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:hint="@string/label_user_id"
  >
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/add_transaction_user_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:textSize="16sp"
      android:textColor="@color/black"
    />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_margin"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:textSize="16sp"
    android:text="@string/label_date"
  />

  <DatePicker
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:datePickerMode="spinner"
    android:calendarViewShown="false"
  />

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_margin"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:hint="@string/label_amount"
  >
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/add_transaction_amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:textSize="16sp"
      android:textColor="@color/black"
    />
  </com.google.android.material.textfield.TextInputLayout>

  <Spinner
    android:id="@+id/add_transaction_tag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_margin"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:spinnerMode="dialog"
    android:entries="@array/transaction_tags"
    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_margin"
    android:layout_marginStart="@dimen/padding_margin_2x"
    android:layout_marginEnd="@dimen/padding_margin_2x"
    android:hint="@string/label_description"
  >
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/add_transaction_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:textSize="16sp"
      android:textColor="@color/black"
    />
  </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>